# lexeme

./: CHANGELOG.md  README.md
crates/lexeme/: Cargo.toml  README.md
crates/lexeme-derive/: Cargo.toml
crates/lexeme-derive/src/: lib.rs
crates/lexeme/benches/shootout/: lexeme.rs  logos.rs  main.rs
crates/lexeme/src/: lib.rs
crates/lexeme/tests/: simple.rs
crates/lexeme/tests/ui/: bad_item_attr.rs  bad_item_attr.stderr  bad_variant_attr.rs  bad_variant_attr.stderr  bad_variant_kind.rs  bad_variant_kind.stderr  extra_item_attr.rs  extra_item_attr.stderr  extra_variant_attr.rs  extra_variant_attr.stderr  invalid_variant_attr.rs  invalid_variant_attr.stderr  many_errors_keep_reporting.rs  many_errors_keep_reporting.stderr  struct.rs  struct.stderr  wrong_crate_attr.rs  wrong_crate_attr.stderr
