[package]
name = "lexeme"
edition = "2021"
version = "0.0.0"
publish = false

[dependencies]
once_cell = "1.9.0"
regex = "1.5.4"

[dependencies.lexeme-derive]
version = "=0.0.0"
path = "../lexeme-derive"

[dev-dependencies]
criterion = "0.3.5"
logos = "0.12.0"
trybuild = "1.0.54"

[[bench]]
name = "shootout"
path = "benches/shootout/main.rs"
harness = false
